addig link sent

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGO_URI=mongodb+srv://btissamchaibi1912:Z6eUcKSEfuDCjMOb@cluster0.gsz0kkb.mongodb.net/kycsystem?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET_KEY=ibtissamdatascientist
-FRONTEND_URL= http://localhost:5173/
+FRONTEND_URL= http://localhost:5173
