--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+-f https://download.pytorch.org/whl/torch_stable.html
 bcrypt==4.2.0
 blinker==1.8.2
 dlib==19.24.4
 dnspython==2.6.1
+torchvision==0.17.2+cpu
+torch==2.2.2+cpu
 facenet-pytorch==2.6.0
 filelock==3.15.4
 Flask==3.0.3
