--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,18 @@
 -f https://download.pytorch.org/whl/torch_stable.html
 bcrypt==4.2.0
-blinker==1.8.2
 dlib==19.24.4
-dnspython==2.6.1
-torchvision==0.17.2+cpu
-torch==2.2.2+cpu
 facenet-pytorch==2.6.0
-filelock==3.15.4
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.1
 Flask-JWT-Extended==4.6.0
 Flask-PyMongo==2.3.0
-fsspec==2024.6.1
 gunicorn==22.0.0
-intel-openmp==2021.4.0
-ipynb==0.5.1
-mkl==2021.4.0
-mpmath==1.3.0
-networkx==3.3
-opencv-python==4.10.0.84
 opencv-python-headless==4.10.0.84
-packaging==24.1
-pillow==10.2.0
 PyJWT==2.8.0
 pymongo==4.8.0
 python-dotenv==1.0.1
-requests==2.32.3
-scikit-learn==1.5.1
-setuptools==70.2.0
-sympy==1.12.1
-tbb==2021.13.0
-tqdm==4.66.4
-typing_extensions==4.12.2
+torchvision==0.17.2+cpu
+torch==2.2.2+cpu
+torchaudio==2.2.2
 wheel==0.43.0
