--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 -f https://download.pytorch.org/whl/torch_stable.html
 bcrypt==4.2.0
+certifi==2024.7.4
+click==8.1.7
 dlib==19.24.4
 facenet-pytorch==2.6.0
 Flask==3.0.3
@@ -7,13 +9,21 @@ Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.1
 Flask-JWT-Extended==4.6.0
 Flask-PyMongo==2.3.0
-scikit-learn==1.5.1
 gunicorn==22.0.0
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+numpy==1.26.4
 opencv-python-headless==4.10.0.84
+pillow==10.2.0
 PyJWT==2.8.0
 pymongo==4.8.0
 python-dotenv==1.0.1
-torchvision==0.17.2+cpu
+requests==2.32.3
+scikit-learn==1.5.1
 torch==2.2.2+cpu
-torchaudio==2.2.2
+torchvision==0.17.2+cpu
+urllib3==2.2.2
+Werkzeug==3.0.3
 wheel==0.43.0
