--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 -f https://download.pytorch.org/whl/torch_stable.html
 bcrypt==4.2.0
+boto3==1.34.156
+botocore==1.34.156
 certifi==2024.7.4
 click==8.1.7
 dlib==19.24.4
